# LanCher-Code

./: .gitignore  AGENTS.md  README.md  lancher.example.yaml  lancher.spec  main.py  pyproject.toml
.lancher/: plan.md
lancher_code/: __init__.py  app.py  cli.py  config.py  context_management.py  errors.py  logging_system.py  models.py  permission_engine.py  prompting.py  rendering.py  session.py  session_store.py  settings_service.py  slash_commands.py  tool_call_parser.py  tui.py  turn_runner.py
lancher_code/config_system/: __init__.py  bootstrap.py  loader.py  paths.py  writer.py
lancher_code/mcp/: __init__.py  adapter.py  config.py  connection.py  manager.py  template.py
lancher_code/providers/: __init__.py  base.py  claude.py  factory.py  openai.py
lancher_code/tools/: __init__.py
lancher_code/tui_views/: __init__.py  bootstrap.py  chat.py  composer.py  message.py  permission.py  settings.py
tests/: conftest.py  test_app_startup.py  test_config.py  test_config_bootstrap.py  test_context_management.py  test_logging_system.py  test_permission_engine.py  test_phase3_mode_and_tools.py  test_prompting.py  test_session.py  test_session_store.py  test_settings.py  test_slash_commands.py  test_tool_call_parser.py  test_tui_flow.py  test_tui_permissions.py  test_tui_phase3.py  test_turn_runner.py
tests/mcp/: stdio_test_server.py  test_adapter_manager.py  test_mcp_config.py  test_permission.py
tests/providers/: test_claude_provider.py  test_openai_provider.py
tests/tools/: test_executor.py  test_find_files_tool.py  test_path_sandbox.py  test_registry.py  (+6 more)
(+15 files in other folders)
