[project]
name = "lancher-code"
version = "0.1.0"
description = "LanCher Code coding assistant"
readme = "docs/phase-1/spec.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1,<1.0.0",
    "PyYAML>=6.0.2,<7.0.0",
    "rich>=14.0.0,<15.0.0",
    "textual>=6.1.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1,<9.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
]

[project.scripts]
lancher-code = "lancher_code.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
